# sortter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: 001_initial_schema.sql
sortter/: db.py  main.py  support_request.py
tests/: test_regex.py
